--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
     </section>
     <script type="module" src="./apikey.js"></script>
-    <!-- <script type="module" src="js/inputver2.js"></script> -->
-    <script type="module" src="js/input.js"></script>
+    <script type="module" src="js/inputver2.js"></script>
+    <!-- <script type="module" src="js/input.js"></script> -->
     <script type="module" src="js/index.js"></script>
     <script type="module" src="js/atsu.js"></script>
     <!-- <script type="module" src="js/asafe.js"></script> -->
