some style added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section>
         <input id="autocomplete" placeholder="Enter a place" type="text">
         <select class="fav-list" id="">
-            <option value="none" id="Favoption">Fav</option>
+            <option value="none" id="Favoption">Favorite Cities <span>&#8595;</span></option>
         </select>
-        <button class="fav-btn">Favorite</button>
+        <button class="fav-btn">Add/Remove Favorite</button>
     </section>
     <section>
         <div class="container-current">
