--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Weather App</title>
         <script src="https://maps.googleapis.com/maps/api/js?language=en&key=AIzaSyAekDQRLB4ssUOeTr0dBtOsqowdFwmnQdo&libraries=places" async > 
     </script>
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.js"
+    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="input">
