--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="input">
         <input id="autocomplete" placeholder="Enter a place" type="text">
-        <select class="fav-list" id="">
+        <select class="fav-list" id="list">
             <option value="none" id="Favoption">Favorite Cities</span></option>
 
         </select>
